Added deleting feature. After deleting, adding new product, updating a product updated my fridge view is loaded.

--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -44,37 +44,24 @@
                 app:srcCompat="@drawable/food_icon"
                 tools:ignore="VectorDrawableCompat" />
 
-            <TextView
-                android:id="@+id/expiryID"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="1dp"
-                android:layout_marginBottom="5dp"
-                android:text="Expiry: "
-                android:textColor="@color/red"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/foodIcon"
-                app:layout_constraintTop_toBottomOf="@+id/productNameID" />
 
             <TextView
                 android:id="@+id/expiryDateID"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
                 android:layout_marginBottom="5dp"
                 android:text="25/03/2022"
                 android:textColor="@color/red"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/expiryID"
+                app:layout_constraintStart_toStartOf="@+id/productNameID"
                 app:layout_constraintTop_toBottomOf="@+id/productNameID" />
 
             <TextView
                 android:id="@+id/quantityID"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
+                android:layout_marginStart="25dp"
                 android:layout_marginTop="25dp"
                 android:layout_marginBottom="25dp"
                 android:text="quantity"
@@ -83,8 +70,22 @@
                 app:layout_constraintStart_toEndOf="@+id/productNameID"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <TextView
+                android:id="@+id/unitID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginBottom="25dp"
+                android:text="unit"
+                android:textSize="20dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/quantityID"
+                app:layout_constraintTop_toTopOf="parent"
+                 />
+
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/deleteButton"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="15dp"
@@ -96,6 +97,8 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/delete_icon"
                 tools:ignore="VectorDrawableCompat" />
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
