--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -35,6 +35,7 @@
             android:focusable="auto"
             android:hint="Enter product name"
             android:inputType="text"
+            android:maxLength="17"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/nameTxt"
             app:layout_constraintTop_toTopOf="parent" />
@@ -84,6 +85,7 @@
             android:layout_marginTop="20dp"
             android:hint="0.00"
             android:inputType="numberDecimal"
+            android:maxLength="4"
             app:layout_constraintStart_toEndOf="@+id/amountTxt"
             app:layout_constraintTop_toBottomOf="@+id/categoryTxt" />
 
