--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -19,7 +19,7 @@
 
             <TextView
                 android:id="@+id/productNameID"
-                android:layout_width="130dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="25dp"
@@ -61,35 +61,33 @@
                 android:id="@+id/quantityID"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="25dp"
                 android:layout_marginTop="25dp"
+                android:layout_marginEnd="5dp"
                 android:layout_marginBottom="25dp"
                 android:text="quantity"
                 android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/productNameID"
+                app:layout_constraintEnd_toStartOf="@+id/unitID"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/unitID"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
                 android:layout_marginTop="25dp"
+                android:layout_marginEnd="5dp"
                 android:layout_marginBottom="25dp"
                 android:text="unit"
                 android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/quantityID"
-                app:layout_constraintTop_toTopOf="parent"
-                 />
+                app:layout_constraintEnd_toStartOf="@+id/deleteButton"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
                 android:id="@+id/deleteButton"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="15dp"
-                android:layout_marginEnd="15dp"
                 android:layout_marginBottom="15dp"
                 android:background="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
