--- a/app/src/main/res/layout/fragment_update.xml
+++ b/app/src/main/res/layout/fragment_update.xml
@@ -33,6 +33,7 @@
             android:focusable="auto"
             android:hint="Enter product name"
             android:inputType="text"
+            android:maxLength="17"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/nameTxtUpdateView"
             app:layout_constraintTop_toTopOf="parent" />
@@ -82,6 +83,7 @@
             android:layout_marginTop="20dp"
             android:hint="0.00"
             android:inputType="numberDecimal"
+            android:maxLength="4"
             app:layout_constraintStart_toEndOf="@+id/amountTxtUpdateView"
             app:layout_constraintTop_toBottomOf="@+id/categoryTxtUpdateView" />
 
