--- a/app/src/main/res/layout/fragment_recipe_details.xml
+++ b/app/src/main/res/layout/fragment_recipe_details.xml
@@ -13,16 +13,25 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/recipeNameDetails"
+            <!--<HorizontalScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Name"
-                android:textStyle="bold"
-                android:padding="8dp"
-                android:textSize="32sp"
-                android:textColor="@color/dark_blue"
-                android:scrollHorizontally="true"/>
+                android:layout_height="wrap_content">-->
+                <TextView
+                    android:id="@+id/recipeNameDetails"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Name"
+                    android:textStyle="bold"
+                    android:padding="8dp"
+                    android:textSize="24sp"
+                    android:textColor="@color/dark_blue"
+                    android:scrollHorizontally="true"
+                    android:fadingEdge="horizontal"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:ellipsize="marquee"
+                    android:singleLine="true" />
+
+
 
             <ImageView
                 android:id="@+id/imageDetails"
@@ -55,7 +64,7 @@
                         android:text="2 people"
                         android:textSize="14sp"
                         android:padding="8dp"
-                        android:textColor="@color/black"/>
+                        android:textColor="@color/dark_blue"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="0dp"
@@ -77,7 +86,7 @@
                         android:text="99 likes"
                         android:textSize="14sp"
                         android:padding="8dp"
-                        android:textColor="@color/black"/>
+                        android:textColor="@color/dark_blue"/>
 
                 </LinearLayout>
                 <LinearLayout
@@ -100,7 +109,7 @@
                         android:text="20 min"
                         android:textSize="14sp"
                         android:padding="8dp"
-                        android:textColor="@color/black"/>
+                        android:textColor="@color/dark_blue"/>
 
                 </LinearLayout>
             </LinearLayout>
@@ -111,15 +120,18 @@
                 android:textColor="@color/dark_blue"
                 android:textSize="22sp"
                 android:textStyle="bold"
-                android:text="Ingredients:"
-                android:padding="4dp"/>
+                android:text="Ingredients"
+                android:padding="4dp"
+                android:textAlignment="center" />
             <TextView
                 android:id="@+id/ingredientsDetails"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Ingredients:"
+                android:text="Ingredients"
                 android:textSize="14sp"
                 android:padding="4dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
                 android:textColor="@color/dark_blue"/>
 
             <TextView
@@ -128,14 +140,17 @@
                 android:textColor="@color/dark_blue"
                 android:textSize="22sp"
                 android:textStyle="bold"
-                android:text="Instruction:"
-                android:padding="4dp"/>
+                android:text="Instruction"
+                android:padding="4dp"
+                android:textAlignment="center" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/instructionRecycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:nestedScrollingEnabled="false"/>
+                android:nestedScrollingEnabled="false"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"/>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
