--- a/app/src/main/res/layout/list_recipe.xml
+++ b/app/src/main/res/layout/list_recipe.xml
@@ -7,7 +7,8 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     app:cardCornerRadius="10dp"
-    app:cardElevation="8dp">
+    app:cardElevation="8dp"
+    android:backgroundTint="@color/light_blue">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,8 +20,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            android:text="RecipeName"
             android:scrollHorizontally="true"
+            android:text="RecipeName"
+            android:textColor="@color/dark_blue"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +60,7 @@
                     android:text="2 people"
                     android:textSize="14sp"
                     android:padding="8dp"
-                    android:textColor="@color/black"/>
+                    android:textColor="@color/dark_blue"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="0dp"
@@ -81,7 +83,7 @@
                     android:text="99 likes"
                     android:textSize="14sp"
                     android:padding="8dp"
-                    android:textColor="@color/black"/>
+                    android:textColor="@color/dark_blue"/>
 
             </LinearLayout>
             <LinearLayout
@@ -105,7 +107,7 @@
                     android:text="20 min"
                     android:textSize="14sp"
                     android:padding="8dp"
-                    android:textColor="@color/black"/>
+                    android:textColor="@color/dark_blue"/>
 
             </LinearLayout>
         </LinearLayout>
