--- a/app/src/main/res/layout/list_steps.xml
+++ b/app/src/main/res/layout/list_steps.xml
@@ -8,7 +8,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
         <TextView
             android:id="@+id/stepNumber"
             android:layout_width="match_parent"
@@ -17,7 +16,7 @@
             android:textStyle="bold"
             android:textColor="@color/dark_blue"
             android:textSize="18sp"
-            android:textAlignment="center"/>
+            android:padding="4dp"/>
 
         <TextView
             android:id="@+id/stepString"
@@ -25,6 +24,7 @@
             android:layout_height="wrap_content"
             android:text="Cook it"
             android:padding="4dp"
+            android:textSize="14sp"
             android:textColor="@color/dark_blue"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
