--- a/app/src/main/res/values-v21/themes.xml
+++ b/app/src/main/res/values-v21/themes.xml
@@ -1,5 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+
     <style name="Theme.MyFridge" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/dark_blue</item>
@@ -11,26 +12,8 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
+        <item name="android:navigationBarColor">@color/black</item>
 
         <!-- Customize your theme here. -->
     </style>
 </resources>
-
-<!--
-<resources xmlns:tools="http://schemas.android.com/tools">
-
-<style name="Theme.MyFridge" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-
-<item name="colorPrimary">@color/purple_200</item>
-<item name="colorPrimaryVariant">@color/purple_700</item>
-<item name="colorOnPrimary">@color/black</item>
-
-<item name="colorSecondary">@color/teal_200</item>
-<item name="colorSecondaryVariant">@color/teal_200</item>
-<item name="colorOnSecondary">@color/black</item>
-
-<item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-
-</style>
-    </resources>
--->
