--- a/app/src/main/res/layout/list_recipe.xml
+++ b/app/src/main/res/layout/list_recipe.xml
@@ -8,7 +8,7 @@
     android:layout_margin="8dp"
     app:cardCornerRadius="10dp"
     app:cardElevation="8dp"
-    android:backgroundTint="@color/light_blue">
+    android:backgroundTint="@color/super_light_blue">
 
     <LinearLayout
         android:layout_width="match_parent"
